flux/infrastructure/webapps/affine/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: affine-server
  namespace: webapps
spec:
  selector:
    app: affine
  ports:
    - name: http
      port: 3010
      targetPort: 3010
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: affine-redis
  namespace: webapps
spec:
  selector:
    app: affine-redis
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: affine-postgres
  namespace: webapps
spec:
  selector:
    app: affine-postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
      protocol: TCP
